# ds5220

./: .gitignore  .gitmodules  new.sh
assignment1/: main.tex  q5-test.R  q5.R  q7.R  refs.bib
assignment2/: main.tex  q2-8.R  q2-9.R
assignment3/: main.tex  q14.R  q15.R  q8.R  q9.R
assignment4/: main.tex  multiple-logistic-regression.R  q13.R  q16.R
assignment5/: main.tex  q2.r  q4.r  q5.r
assignment6/: main.tex
assignment6/src/: ch5q5.R  ch5q6.R  ch5q7.R  ch6q6.R
assignment7/: main.tex
assignment7/src/: q6a.R  q6b.R  q8.R  q9.R
assignment8/: main.tex
assignment8/src/: q2.R  q3.R  q5.R  q8.R
assignment9/: main.py  main.tex
assignment9/src/: q1.R  q13.ipynb  q13.py  q6.R  q7-output.py  q7.R  q7.html  q7.ipynb  q7.py
ex1/: TODOS.md  loomis.rda  main.tex  q1.R  q10.R  q2.R  q5-2.R  q5-ex.R  q5.R  q6.R  q7.R  q8.R  q9.R  refs.bib
ex2/: .gitignore  TODO.md  load_data.py  main.py  main.tex  pyproject.toml  q11.py  q12.py  q12q13.py  q14.py  q1q2.py  q4q5.py  q6.py  q8.py
notes/: class04.md  min_log_likelihood_newton.R  power_method.R
