[project]
name = "ex2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "mne>=1.9.0",
    "mne-bids>=0.16.0",
    "pandas>=2.2.3",
    "statsmodels>=0.14.4",
    "numpy<2.0.0",
    "pmdarima>=2.0.4",
    "tensorflow[and-cuda]>=2.18.1",
]
